--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                 reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat 
                 cupidatat non.</p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.jpg " alt="Foto do Lucas Vilela">
+        <img class="apresentacao__imagem" src="./assets/Imagem.jpg " alt="Foto do Lucas Vilela">
     </main>
     <footer class="rodape">
         <p>Desenvonvido por Lucas Vilela.</p>
