--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="apresentacao__links__apresentacao" href="https://github.com/lucasvilela91"><img src="assets/github.png"> Github</a>
          </div>
    </section>
-      <img class="apresentacao__imagem" src="./assets/imagem.jpg"  alt="Foto do Lucas Vilela">
+      <img class="apresentacao__imagem" src="./assets/Imagem.jpg"  alt="Foto do Lucas Vilela">
    </main>
    <footer class="rodape">
       <p>Desenvonvido por Lucas Vilela.</p>
